replace calls to Path.of with Paths.get